@@ -4,8 +4,7 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
-ARCHIVED CONTENT="Archived Content"
-COUNT="Count"
-DESCARCHIVE="This Module shows a list of the calendar months containing Archived Articles. After you have changed the status of an Article to Archived, this list will be automatically generated."
-MOD_ARCHIVE="Articles - Archived List"
-THE NUMBER OF ITEMS TO DISPLAY DEFAULT IS 10="The number of months to display (the default is 10)"
+ARCHIVED ARTICLES="Archived Articles"
+MOD_ARTICLES_ARCHIVE_FIELD_COUNT_LABEL="Count"
+MOD_ARTICLES_ARCHIVE_FIELD_COUNT_DESC="The number of months to display (the default is 10)"
+MOD_ARTICLES_ARCHIVE_XML_DESCRIPTION="This Module shows a list of the calendar months containing Archived Articles. After you have changed the status of an Article to Archived, this list will be automatically generated."
