@@ -4,7 +4,7 @@
 	version="1.6.0"
 	client="site"
 	method="upgrade">
-	<name>Archived Content</name>
+	<name>Archived Articles</name>
 	<author>Joomla! Project</author>
 	<creationDate>July 2006</creationDate>
 	<copyright>Copyright (C) 2005 - 2010 Open Source Matters. All rights reserved.</copyright>
@@ -12,7 +12,7 @@
 	<authorEmail>admin@joomla.org</authorEmail>
 	<authorUrl>www.joomla.org</authorUrl>
 	<version>1.6.0</version>
-	<description>DESCARCHIVE</description>
+	<description>MOD_ARTICLES_ARCHIVE_XML_DESCRIPTION</description>
 	<files>
 		<filename
 			module="mod_articles_archive">mod_articles_archive.php</filename>
@@ -30,8 +30,8 @@
 			name="count"
 			type="text"
 			default="10"
-			label="Count"
-			description="The number of items to display default is 10" />
+			label="MOD_ARTICLES_ARCHIVE_FIELD_COUNT_LABEL"
+			description="MOD_ARTICLES_ARCHIVE_FIELD_COUNT_DESC" />
 	</fields>
 	<fields
 		group="advanced">
